Version (CVS)
-------------

JDO:    Added "trigger" mode for SEQUENCE key generator. 
        (Vitaly Shishakov <vitaly.shishakov@novalumen.com>)


Version 0.8.11 December, 15 2000
--------------------------------

XML:    Updated Schema syntax and some of the Schema Object Model to support 
        the W3C XML Schema Candidate Release. (kvisco)

XML:    Allow the use of uninitialized collection. Castor will instiate a new 
        collection of the proper type when necessary. (seb)

XML:    Added #setResolver method to Marshaller, thanks to George Stewart for
        pointing out to me that I neglected to add this method. (kvisco)

XML:    Changed name of xml element in the mapping.dtd to bind-xml. This change
        won't effect any existing mappings yet, because I've added backward
        compatibility support. (kvisco)

JDO:    For HIGH/LOW key generator the paramater "global" has been added, it gives possibility
        to generate globally unique keys (Oleg Nitz).

JDO:    SAP DB driver, improved support for MySQL (Oleg Nitz)

JDO:    Added possibility to close OQL queries in order to release resources (Oleg Nitz)

Version 0.8.10
--------------

XML:    Made the collection name in the mapping file NOT case sensitive. (Seb)

XML:    Added new validation flag for the marshalling framework in castor.properties
    Changed the parser validation property to og.exolab.castor.parser.validation
    (Arnaud)

XML:    Added fix to Marshaller#isPrimitive to support BigDecimal, submitted
        by Don Kleppinger. (kvisco)

XML:    Added "-nodesc" flag to source generater to disable generation of
        class descriptors. Suggested by George Stewart. (kvisco)

XML:    Fixed a bug in the unmarshalling of array of primitive type when using mapping.
        (Seb <gignoux@intalio.com>)

XML:    Added feature to castorbuilder.properties to allow specifying a super
        class of generated types (kvisco)

Version 0.8.9
-------------

